<resources>
    <string name="app_name">House Rent System Beta</string>
    <string name="menu_account">Account</string>
    <string name="menu_generate_bill">Generate Bill</string>
    <string name="menu_renter_info">Renter List</string>
    <string name="menu_Register">Register</string>
    <string name="menu_bill_info">Bill Info</string>
    <string name="menu_reports">Reports</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This Page Under Construction!!</string>
</resources>
